--- a/index.html
+++ b/index.html
@@ -30,21 +30,24 @@
     <h2>What You'll Learn</h2>
     <div class="cards">
       <div class="card">
-        <img src="images/pi4.jpg" alt="Raspberry Pi 4" />
+        <!-- Reference the Raspberry Pi 4 image directly from Wikipedia so we don't need a local file -->
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Raspberry_Pi_4_Model_B_-_Top.jpg/1200px-Raspberry_Pi_4_Model_B_-_Top.jpg" alt="Raspberry Pi 4" />
         <div class="card-content">
           <h3>Beginner‑friendly Guides</h3>
           <p>Step-by-step instructions for setting up sensors, controlling relays and running smart home software. Each guide is written in plain language with code snippets and wiring diagrams.</p>
         </div>
       </div>
       <div class="card">
-        <img src="images/security.png" alt="Security" />
+        <!-- Use the security icon stored at the project root -->
+        <img src="security.png" alt="Security" />
         <div class="card-content">
           <h3>Security Best Practices</h3>
           <p>Protect your Pi and home network with guides on updating, creating new users, setting up a firewall and keeping your devices safe.</p>
         </div>
       </div>
       <div class="card">
-        <img src="images/hero.jpg" alt="Smart home concept" />
+        <!-- Reuse the hero image for the concept card since the hero.jpg file isn't available in the repository -->
+        <img src="hero.png" alt="Smart home concept" />
         <div class="card-content">
           <h3>Recommended Gear</h3>
           <p>We curate the best hardware for smart home projects — from starter kits and sensors to relay modules and power supplies. All recommendations link to the products we actually use.</p>
